--- a/Week1/notebook.ipynb
+++ b/Week1/notebook.ipynb
@@ -6,9 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import openai\n",
-    "from openai import OpenAI\n",
-    "import os"
+    "import google.generativeai as genai\n",
+    "import tqdm as notebook_tqdm\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "import pathlib\n",
+    "import textwrap"
    ]
   },
   {
@@ -17,7 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = OpenAI()"
+    "def to_markdown(text):\n",
+    "  text = text.replace('•', '  *')\n",
+    "  return Markdown(textwrap.indent(text, '> ', predicate=lambda _: True))"
    ]
   },
   {
@@ -26,10 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = client.chat.completions.create(\n",
-    "    model=\"gpt-4o\",\n",
-    "    messages=[{\"role\":\"user\", \"content\": \"is it oo late to join the course\"}]\n",
-    ")"
+    "load_dotenv()"
    ]
   },
   {
@@ -38,13 +40,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response.choices[0].message.content"
+    "GOOGLE_API_KEY = os.environ.get(\"GOOGLE_API_KEY\")\n",
+    "genai.configure(api_key=GOOGLE_API_KEY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = genai.GenerativeModel('gemini-1.5-flash')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = model.generate_content(\"Is it too late to join the course?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_markdown(response.text)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
