feat: change minsearch for elasticsearch

--- a/Week1/rag-intro.ipynb
+++ b/Week1/rag-intro.ipynb
@@ -10,6 +10,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Retrieval"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -157,6 +164,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generation with Groq (OpenAI alternatives)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -216,6 +230,13 @@
     ")\n",
     "\n",
     "response.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleaned RAG flow"
    ]
   },
   {
@@ -315,6 +336,226 @@
    "source": [
     "query = 'how do I run kafka?'\n",
     "\n",
+    "rag(query)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Searching Elastic Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from elasticsearch import Elasticsearch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "es_client = Elasticsearch(\"http://localhost:9200\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'course-questions'})"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index_settings = {\n",
+    "    \"settings\": {\n",
+    "        \"number_of_shards\": 1,\n",
+    "        \"number_of_replicas\": 0\n",
+    "    },\n",
+    "    \"mappings\": {\n",
+    "        \"properties\": {\n",
+    "            \"text\": {\"type\": \"text\"},\n",
+    "            \"section\": {\"type\": \"text\"},\n",
+    "            \"question\": {\"type\": \"text\"},\n",
+    "            \"course\": {\"type\": \"keyword\"} \n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "index_name = \"course-questions\"\n",
+    "\n",
+    "es_client.indices.create(index=index_name, body=index_settings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'text': \"The purpose of this document is to capture frequently asked technical questions\\nThe exact day and hour of the course will be 15th Jan 2024 at 17h00. The course will start with the first  “Office Hours'' live.1\\nSubscribe to course public Google Calendar (it works from Desktop only).\\nRegister before the course starts using this link.\\nJoin the course Telegram channel with announcements.\\nDon’t forget to register in DataTalks.Club's Slack and join the channel.\",\n",
+       " 'section': 'General course-related questions',\n",
+       " 'question': 'Course - When will the course start?',\n",
+       " 'course': 'data-engineering-zoomcamp'}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "documents[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm.auto import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 948/948 [00:08<00:00, 105.65it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for doc in tqdm(documents):\n",
+    "    es_client.index(index=index_name, document=doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = 'I just discovered the course. Can I still join it?'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def elastic_search(query):\n",
+    "    search_query = {\n",
+    "        \"size\": 5,\n",
+    "        \"query\": {\n",
+    "            \"bool\": {\n",
+    "                \"must\": {\n",
+    "                    \"multi_match\": {\n",
+    "                        \"query\": query,\n",
+    "                        \"fields\": [\"question^3\", \"text\", \"section\"],\n",
+    "                        \"type\": \"best_fields\"\n",
+    "                    }\n",
+    "                },\n",
+    "                \"filter\": {\n",
+    "                    \"term\": {\n",
+    "                        \"course\": \"data-engineering-zoomcamp\"\n",
+    "                    }\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    response = es_client.search(index=index_name, body=search_query)\n",
+    "    \n",
+    "    result_docs = []\n",
+    "    \n",
+    "    for hit in response['hits']['hits']:\n",
+    "        result_docs.append(hit['_source'])\n",
+    "    \n",
+    "    return result_docs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rag(query):\n",
+    "    search_results = elastic_search(query)\n",
+    "    prompt = build_prompt(query, search_results)\n",
+    "    answer = llm(prompt)\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Yes, you can still join the course even if it has already started. You are still eligible to submit homeworks, but be aware that there will be deadlines for turning in the final projects. If you want to follow the course at your own pace, you can do so after it finishes, as all materials will be kept. You can also start installing and setting up the dependencies and requirements, and look over the prerequisites and syllabus before starting the course. Additionally, you can get support in the Slack channel even if you take the course in the self-paced mode. You don't need a confirmation email after registering for the course, you can just start learning and submitting homework without registering.\""
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rag(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"how do I run kafka?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'To run Kafka, you need to follow the instructions provided in the \"Module 6: streaming with kafka\" section of the FAQ database.\\n\\nFirst, you need to create a virtual environment and install the required packages. Here are the steps:\\n\\n1. Create a virtual environment:\\n   ```\\n   python -m venv env\\n   ```\\n2. Activate the virtual environment:\\n   ```\\n   source env/bin/activate\\n   ```\\n   (Note: For Windows, use `env/Scripts/activate` instead of `env/bin/activate`)\\n3. Install the required packages:\\n   ```\\n   pip install -r ../requirements.txt\\n   ```\\n\\nNow, you can run the Kafka producer and consumer using the command provided in the FAQ database. For example, to run the producer, you can use the following command:\\n```bash\\njava -cp build/libs/<jar_name>-1.0-SNAPSHOT.jar:out src/main/java/org/example/JsonProducer.java\\n```\\nNote that you need to replace `<jar_name>` with the actual name of the JAR file in your project directory.\\n\\nSimilarly, you can follow the instructions in the FAQ database to run the consumer or any other Kafka components.'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "rag(query)"
    ]
   }
