feat: create script with rag_flow + take input from the user

--- a/Week1/homework/homework.ipynb
+++ b/Week1/homework/homework.ipynb
@@ -385,11 +385,179 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Sending the prompt to Groq"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from groq import Groq\n",
+    "import os\n",
+    "from dotenv import load_dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_dotenv()\n",
+    "GROQ_API_KEY = os.getenv(\"GROQ_API_KEY\")\n",
+    "\n",
+    "\n",
+    "client = Groq(\n",
+    "    api_key=GROQ_API_KEY\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def elastic_search(query):\n",
+    "    search_query = {\n",
+    "        \"size\": 3,\n",
+    "        \"query\": {\n",
+    "            \"bool\": {\n",
+    "                \"must\": {\n",
+    "                    \"multi_match\": {\n",
+    "                        \"query\": query,\n",
+    "                        \"fields\": [\"question^4\", \"text\"],\n",
+    "                        \"type\": \"best_fields\"\n",
+    "                    }\n",
+    "                },\n",
+    "                \"filter\": {\n",
+    "                    \"term\": {\n",
+    "                        \"course\": \"machine-learning-zoomcamp\"\n",
+    "                    }\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "    response = es_client.search(index=index_name, body=search_query)\n",
+    "        \n",
+    "    result_docs = []\n",
+    "        \n",
+    "    for hit in response['hits']['hits']:\n",
+    "        result_docs.append(hit['_source'])\n",
+    "\n",
+    "    return result_docs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_prompt(query, search_results):\n",
+    "    prompt_template = \"\"\"\n",
+    "You're a course teaching assistant. Answer the QUESTION based on the CONTEXT from the FAQ database.\n",
+    "Use only the facts from the CONTEXT when answering the QUESTION.\n",
+    "\n",
+    "QUESTION: {question}\n",
+    "\n",
+    "CONTEXT: \n",
+    "{context}\n",
+    "\"\"\".strip()\n",
+    "    \n",
+    "    context = \"\"\n",
+    "    \n",
+    "    for doc in search_results:\n",
+    "        context = context + f\"Q: {doc['question']}\\n\\A: {doc['text']}\\n\\n\"\n",
+    "    \n",
+    "    prompt = prompt_template.format(question=query, context=context).strip()\n",
+    "    return prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def llm(prompt):\n",
+    "    response = client.chat.completions.create(\n",
+    "        messages = [\n",
+    "            {\n",
+    "                \"role\":\"user\",\n",
+    "                \"content\": prompt\n",
+    "            }\n",
+    "        ],\n",
+    "        model=\"mixtral-8x7b-32768\"\n",
+    "    )\n",
+    "\n",
+    "    return response.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rag(query):\n",
+    "    search_results = elastic_search(query)\n",
+    "    prompt = build_prompt(query, search_results)\n",
+    "    answer = llm(prompt)\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query='How do I execute a command in a running docker container?'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = rag(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To execute a command in a running Docker container, you can use the `docker exec` command. Here's how to do it:\n",
+      "\n",
+      "1. First, find the container ID by running `docker ps` to list all running containers.\n",
+      "2. Then, execute a command in the specific container by using the following command:\n",
+      "\n",
+      "```\n",
+      "docker exec -it <container-id> <command>\n",
+      "```\n",
+      "\n",
+      "Replace `<container-id>` with your actual container ID and `<command>` with the command you want to execute.\n",
+      "\n",
+      "This information was provided in the response to the FAQ question:\n",
+      "\"How do I debug a docker container?\" by Marcos MJD.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response)"
+   ]
   }
  ],
  "metadata": {
