fix: correct typo

--- a/Week1/homework/homework.ipynb
+++ b/Week1/homework/homework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,11 +91,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 948/948 [00:07<00:00, 121.30it/s]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8d58154e53354e1bb19fbe99f8d130bb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/948 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -121,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,16 +157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[84.050095]"
+       "[83.472115]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +237,7 @@
        "  'course': 'machine-learning-zoomcamp'}]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,12 +250,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Building a prompt"
+    "## Building a prompt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +266,7 @@
     "\n",
     "QUESTION: {question}\n",
     "\n",
-    "CONTEXT: \n",
+    "CONTEXT:\n",
     "{context}\n",
     "\"\"\".strip()\n",
     "    \n",
@@ -274,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +302,7 @@
       "\n",
       "QUESTION: How do I execute a command in a running docker container?\n",
       "\n",
-      "CONTEXT: \n",
+      "CONTEXT:\n",
       "Q: How do I debug a docker container?\n",
       "\\A: Launch the container image in interactive mode and overriding the entrypoint, so that it starts a bash command.\n",
       "docker run -it --entrypoint bash <image>\n",
@@ -323,16 +330,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1466"
+       "1465"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,16 +366,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "326"
+       "325"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -541,17 +548,27 @@
      "text": [
       "To execute a command in a running Docker container, you can use the `docker exec` command. Here's how to do it:\n",
       "\n",
-      "1. First, find the container ID by running `docker ps` to list all running containers.\n",
-      "2. Then, execute a command in the specific container by using the following command:\n",
+      "1. First, find the container ID by running the command `docker ps` to list the running containers.\n",
+      "2. Then, use the `docker exec` command with the `-it` flag, followed by the container ID and the command you want to execute inside the container:\n",
       "\n",
       "```\n",
       "docker exec -it <container-id> <command>\n",
       "```\n",
       "\n",
-      "Replace `<container-id>` with your actual container ID and `<command>` with the command you want to execute.\n",
+      "Replace `<container-id>` with your actual container ID, and `<command>` with the command you want to execute inside the container. For example, to start a bash shell, you would use the command:\n",
       "\n",
-      "This information was provided in the response to the FAQ question:\n",
-      "\"How do I debug a docker container?\" by Marcos MJD.\n"
+      "```\n",
+      "docker exec -it <container-id> bash\n",
+      "```\n",
+      "\n",
+      "This is based on the following FAQ entry:\n",
+      "Q: How do I debug a docker container?\n",
+      "A: Launch the container image in interactive mode and overriding the entrypoint, so that it starts a bash command.\n",
+      "docker run -it --entrypoint bash <image>\n",
+      "If the container is already running, execute a command in the specific container:\n",
+      "docker ps (find the container-id)\n",
+      "docker exec -it <container-id> bash\n",
+      "(Marcos MJD)\n"
      ]
     }
    ],
