--- a/Week1/homework/homework.ipynb
+++ b/Week1/homework/homework.ipynb
@@ -93,7 +93,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d58154e53354e1bb19fbe99f8d130bb",
+       "model_id": "f60c75364553466cb72b30cbd5bda36c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -163,7 +163,7 @@
     {
      "data": {
       "text/plain": [
-       "[83.472115]"
+       "[83.71674]"
       ]
      },
      "execution_count": 7,
@@ -273,7 +273,7 @@
     "    context = \"\"\n",
     "    \n",
     "    for doc in search_results:\n",
-    "        context = context + f\"Q: {doc['question']}\\n\\A: {doc['text']}\\n\\n\"\n",
+    "        context = context + f\"Q: {doc['question']}\\nA: {doc['text']}\\n\\n\"\n",
     "    \n",
     "    prompt = prompt_template.format(question=query, context=context).strip()\n",
     "    return prompt"
@@ -304,7 +304,7 @@
       "\n",
       "CONTEXT:\n",
       "Q: How do I debug a docker container?\n",
-      "\\A: Launch the container image in interactive mode and overriding the entrypoint, so that it starts a bash command.\n",
+      "A: Launch the container image in interactive mode and overriding the entrypoint, so that it starts a bash command.\n",
       "docker run -it --entrypoint bash <image>\n",
       "If the container is already running, execute a command in the specific container:\n",
       "docker ps (find the container-id)\n",
@@ -312,13 +312,13 @@
       "(Marcos MJD)\n",
       "\n",
       "Q: How do I copy files from my local machine to docker container?\n",
-      "\\A: You can copy files from your local machine into a Docker container using the docker cp command. Here's how to do it:\n",
+      "A: You can copy files from your local machine into a Docker container using the docker cp command. Here's how to do it:\n",
       "To copy a file or directory from your local machine into a running Docker container, you can use the `docker cp command`. The basic syntax is as follows:\n",
       "docker cp /path/to/local/file_or_directory container_id:/path/in/container\n",
       "Hrithik Kumar Advani\n",
       "\n",
       "Q: How do I copy files from a different folder into docker container’s working directory?\n",
-      "\\A: You can copy files from your local machine into a Docker container using the docker cp command. Here's how to do it:\n",
+      "A: You can copy files from your local machine into a Docker container using the docker cp command. Here's how to do it:\n",
       "In the Dockerfile, you can provide the folder containing the files that you want to copy over. The basic syntax is as follows:\n",
       "COPY [\"src/predict.py\", \"models/xgb_model.bin\", \"./\"]\t\t\t\t\t\t\t\t\t\t\tGopakumar Gopinathan\n"
      ]
@@ -336,7 +336,7 @@
     {
      "data": {
       "text/plain": [
-       "1465"
+       "1462"
       ]
      },
      "execution_count": 13,
@@ -372,7 +372,7 @@
     {
      "data": {
       "text/plain": [
-       "325"
+       "322"
       ]
      },
      "execution_count": 15,
@@ -546,29 +546,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To execute a command in a running Docker container, you can use the `docker exec` command. Here's how to do it:\n",
+      "To execute a command in a running Docker container, you can use the `docker exec` command followed by the `-it` flag, the container ID, and the command you want to execute. For example:\n",
       "\n",
-      "1. First, find the container ID by running the command `docker ps` to list the running containers.\n",
-      "2. Then, use the `docker exec` command with the `-it` flag, followed by the container ID and the command you want to execute inside the container:\n",
-      "\n",
-      "```\n",
       "docker exec -it <container-id> <command>\n",
-      "```\n",
       "\n",
-      "Replace `<container-id>` with your actual container ID, and `<command>` with the command you want to execute inside the container. For example, to start a bash shell, you would use the command:\n",
-      "\n",
-      "```\n",
-      "docker exec -it <container-id> bash\n",
-      "```\n",
-      "\n",
-      "This is based on the following FAQ entry:\n",
-      "Q: How do I debug a docker container?\n",
-      "A: Launch the container image in interactive mode and overriding the entrypoint, so that it starts a bash command.\n",
-      "docker run -it --entrypoint bash <image>\n",
-      "If the container is already running, execute a command in the specific container:\n",
-      "docker ps (find the container-id)\n",
-      "docker exec -it <container-id> bash\n",
-      "(Marcos MJD)\n"
+      "This is provided in the first answer from the context, by Marcos MJD.\n"
      ]
     }
    ],
