--- a/Week2/Open_Source_LLM.ipynb
+++ b/Week2/Open_Source_LLM.ipynb
@@ -137,9 +137,14 @@
         "id": "gvQChO9hCzmt"
       },
       "source": [
-        "## Flan-T5-xl\n",
-        "\n",
-        "- Hugging Face: [Flan T5](https://huggingface.co/google/flan-t5-xl)"
+        "## Flan-T5-xl"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- [Flan T5 XL from Google](https://huggingface.co/google/flan-t5-xl)"
       ]
     },
     {
@@ -539,6 +544,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- [Phi 3 Mini from Microsoft](https://huggingface.co/microsoft/Phi-3-mini-4k-instruct)"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -873,6 +885,13 @@
       },
       "source": [
         "## Mistral-7B"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- [Mistral-7B from Mistral](https://huggingface.co/mistralai/Mistral-7B-v0.1)"
       ]
     },
     {
