fix: add link to leaderboard

--- a/Week2/Open_Source_LLM.ipynb
+++ b/Week2/Open_Source_LLM.ipynb
@@ -144,7 +144,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "- [Flan T5 XL from Google](https://huggingface.co/google/flan-t5-xl)"
+        "- [Flan T5 XL from Google](https://huggingface.co/google/flan-t5-xl)\n",
+        "- [Documentation](https://huggingface.co/docs/transformers/en/model_doc/flan-t5)"
       ]
     },
     {
@@ -891,7 +892,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "- [Mistral-7B from Mistral](https://huggingface.co/mistralai/Mistral-7B-v0.1)"
+        "- [Mistral-7B from Mistral](https://huggingface.co/mistralai/Mistral-7B-v0.1)\n",
+        "- [LLM Tutorial](https://huggingface.co/docs/transformers/en/llm_tutorial)"
       ]
     },
     {
@@ -1024,6 +1026,14 @@
         "    response = generator(prompt, max_length=500, temperature=0.7, top_p=0.95, num_return_sequences=1)\n",
         "    response_final = response[0]['generated_text']\n",
         "    return response_final[len(prompt):].strip()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- [Leaderboard](https://huggingface.co/spaces/optimum/llm-perf-leaderboard)\n",
+        "- [Open Source Leaderboard](https://huggingface.co/spaces/open-llm-leaderboard/open_llm_leaderboard)"
       ]
     }
   ],
