--- a/Week3/homework/homework.ipynb
+++ b/Week3/homework/homework.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,13 +319,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0201845042546a78f6a0fada33733ef",
+       "model_id": "4ca132b49e4d4477b3b3d75b440a3a3c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -344,6 +344,7 @@
     "    doc_id = q['document']\n",
     "    question_embedding = embedding_model.encode(q['question'])\n",
     "    results = search_engine.search(question_embedding, num_results=5)\n",
+    "\n",
     "    relevance = [d['id'] == doc_id for d in results]\n",
     "    relevance_total.append(relevance)"
    ]
@@ -361,7 +362,7 @@
     "        if True in line:\n",
     "            cnt = cnt + 1\n",
     "\n",
-    "    return cnt / len(relevance_total)\n"
+    "    return cnt / len(relevance_total)"
    ]
   },
   {
@@ -373,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +383,7 @@
        "0.0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +669,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Answer:* 0.79"
+    "*Answer:* 0.73"
    ]
   }
  ],
