--- a/003-Vector Search/homework/homework.ipynb
+++ b/003-Vector Search/homework/homework.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,40 +242,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'text': 'You can find the latest and up-to-date deadlines here: https://docs.google.com/spreadsheets/d/e/2PACX-1vQACMLuutV5rvXg5qICuJGL-yZqIV0FBD84CxPdC5eZHf8TfzB-CJT_3Mo7U7oGVTXmSihPgQxuuoku/pubhtml\\nAlso, take note of Announcements from @Au-Tomator for any extensions or other news. Or, the form may also show the updated deadline, if Instructor(s) has updated it.',\n",
+       "[{'text': 'Yes, you can. You won’t be able to submit some of the homeworks, but you can still take part in the course.\\nIn order to get a certificate, you need to submit 2 out of 3 course projects and review 3 peers’ Projects by the deadline. It means that if you join the course at the end of November and manage to work on two projects, you will still be eligible for a certificate.',\n",
        "  'section': 'General course-related questions',\n",
-       "  'question': 'Homework - What are homework and project deadlines?',\n",
-       "  'course': 'data-engineering-zoomcamp',\n",
-       "  'id': 'a1daf537'},\n",
-       " {'text': 'After you submit your homework it will be graded based on the amount of questions in a particular homework. You can see how many points you have right on the page of the homework up top. Additionally in the leaderboard you will find the sum of all points you’ve earned - points for Homeworks, FAQs and Learning in Public. If homework is clear, others work as follows: if you submit something to FAQ, you get one point, for each learning in a public link you get one point.\\n(https://datatalks-club.slack.com/archives/C01FABYF2RG/p1706846846359379?thread_ts=1706825019.546229&cid=C01FABYF2RG)',\n",
+       "  'question': 'The course has already started. Can I still join it?',\n",
+       "  'course': 'machine-learning-zoomcamp',\n",
+       "  'id': 'ee58a693'},\n",
+       " {'text': 'Welcome to the course! Go to the course page (http://mlzoomcamp.com/), scroll down and start going through the course materials. Then read everything in the cohort folder for your cohort’s year.\\nClick on the links and start watching the videos. Also watch office hours from previous cohorts. Go to DTC youtube channel and click on Playlists and search for {course yyyy}. ML Zoomcamp was first launched in 2021.\\nOr you can just use this link: http://mlzoomcamp.com/#syllabus',\n",
        "  'section': 'General course-related questions',\n",
-       "  'question': 'Homework and Leaderboard - what is the system for points in the course management platform?',\n",
-       "  'course': 'data-engineering-zoomcamp',\n",
-       "  'id': '29865466'},\n",
-       " {'text': \"There are 3 Zoom Camps in a year, as of 2024. However, they are for separate courses:\\nData-Engineering (Jan - Apr)\\nMLOps (May - Aug)\\nMachine Learning (Sep - Jan)\\nThere's only one Data-Engineering Zoomcamp “live” cohort per year, for the certification. Same as for the other Zoomcamps.\\nThey follow pretty much the same schedule for each cohort per zoomcamp. For Data-Engineering it is (generally) from Jan-Apr of the year. If you’re not interested in the Certificate, you can take any zoom camps at any time, at your own pace, out of sync with any “live” cohort.\",\n",
+       "  'question': 'I just joined. What should I do next? How can I access course materials?',\n",
+       "  'course': 'machine-learning-zoomcamp',\n",
+       "  'id': '0a278fb2'},\n",
+       " {'text': \"The process is automated now, so you should receive the email eventually. If you haven’t, check your promotions tab in Gmail as well as spam.\\nIf you unsubscribed from our newsletter, you won't get course related updates too.\\nBut don't worry, it’s not a problem. To make sure you don’t miss anything, join the #course-ml-zoomcamp channel in Slack and our telegram channel with announcements. This is enough to follow the course.\",\n",
        "  'section': 'General course-related questions',\n",
-       "  'question': 'Course - how many Zoomcamps in a year?',\n",
-       "  'course': 'data-engineering-zoomcamp',\n",
-       "  'id': '2ed9b986'},\n",
-       " {'text': 'Check Docker Compose File:\\nEnsure that your docker-compose.yaml file is correctly configured with the necessary details for the \"control-center\" service. Check the service name, image name, ports, volumes, environment variables, and any other configurations required for the container to start.\\nOn Mac OSX 12.2.1 (Monterey) I could not start the kafka control center. I opened Docker Desktop and saw docker images still running from week 4, which I did not see when I typed “docker ps.” I deleted them in docker desktop and then had no problem starting up the kafka environment.',\n",
-       "  'section': 'Module 6: streaming with kafka',\n",
-       "  'question': 'Could not start docker image “control-center” from the docker-compose.yaml file.',\n",
-       "  'course': 'data-engineering-zoomcamp',\n",
-       "  'id': '70ac8e80'},\n",
-       " {'text': 'You can set it up on your laptop or PC if you prefer to work locally from your laptop or PC.\\nYou might face some challenges, especially for Windows users. If you face cnd2\\nIf you prefer to work on the local machine, you may start with the week 1 Introduction to Docker and follow through.\\nHowever, if you prefer to set up a virtual machine, you may start with these first:\\nUsing GitHub Codespaces\\nSetting up the environment on a cloudV Mcodespace\\nI decided to work on a virtual machine because I have different laptops & PCs for my home & office, so I can work on this boot camp virtually anywhere.',\n",
+       "  'question': \"I filled the form, but haven't received a confirmation email. Is it normal?\",\n",
+       "  'course': 'machine-learning-zoomcamp',\n",
+       "  'id': '6ba259b1'},\n",
+       " {'text': 'Technically, yes. Advisable? Not really. Reasons:\\nSome homework(s) asks for specific python library versions.\\nAnswers may not match in MCQ options if using different languages other than Python 3.10 (the recommended version for 2023 cohort)\\nAnd as for midterms/capstones, your peer-reviewers may not know these other languages. Do you want to be penalized for others not knowing these other languages?\\nYou can create a separate repo using course’s lessons but written in other languages for your own learnings, but not advisable for submissions.\\ntx[source]',\n",
+       "  'section': 'Miscellaneous',\n",
+       "  'question': 'Can I do the course in other languages, like R or Scala?',\n",
+       "  'course': 'machine-learning-zoomcamp',\n",
+       "  'id': '9f261648'},\n",
+       " {'text': 'We won’t re-record the course videos. The focus of the course and the skills we want to teach remained the same, and the videos are still up-to-date.\\nIf you haven’t taken part in the previous iteration, you can start watching the videos. It’ll be useful for you and you will learn new things. However, we recommend using Python 3.10 now instead of Python 3.8.',\n",
        "  'section': 'General course-related questions',\n",
-       "  'question': 'Environment - Should I use my local machine, GCP, or GitHub Codespaces for my environment?',\n",
-       "  'course': 'data-engineering-zoomcamp',\n",
-       "  'id': 'ddf6c1b3'}]"
+       "  'question': 'The course videos are from the previous iteration. Will you release new ones or we’ll use the videos from 2021?',\n",
+       "  'course': 'machine-learning-zoomcamp',\n",
+       "  'id': 'e7ba6b8a'}]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
     "        idx = np.argsort(-scores)[:num_results]\n",
     "        return [self.documents[i] for i in idx]\n",
     "\n",
-    "search_engine = VectorSearchEngine(documents=documents, embeddings=X)\n",
+    "search_engine = VectorSearchEngine(documents=filtered_documents, embeddings=X)\n",
     "search_engine.search(v, num_results=5)"
    ]
   },
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,13 +319,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ca132b49e4d4477b3b3d75b440a3a3c",
+       "model_id": "fe82bbc18f714463820b7c09a1716234",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1830 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "for doc in tqdm(ground_truth):\n",
+    "    question = doc['question']\n",
+    "\n",
+    "    doc['question_vector'] = embedding_model.encode(question)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7624c38bba394794a602d875b613ddce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -342,16 +369,14 @@
     "\n",
     "for q in tqdm(ground_truth):\n",
     "    doc_id = q['document']\n",
-    "    question_embedding = embedding_model.encode(q['question'])\n",
-    "    results = search_engine.search(question_embedding, num_results=5)\n",
-    "\n",
+    "    results = search_engine.search(q['question_vector'], num_results=5)\n",
     "    relevance = [d['id'] == doc_id for d in results]\n",
     "    relevance_total.append(relevance)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,16 +399,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "0.9398907103825137"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Answer:*"
+    "*Answer:* 0.93"
    ]
   },
   {
@@ -408,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +442,7 @@
        "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'course-questions'})"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,18 +492,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0837849d0c564f37bede84ffe7a22398",
+       "model_id": "6b1580a78e214ab096dcab402bd7ca97",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/948 [00:00<?, ?it/s]"
+       "  0%|          | 0/375 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -486,7 +511,7 @@
     }
    ],
    "source": [
-    "for doc in tqdm(documents):\n",
+    "for doc in tqdm(filtered_documents):\n",
     "    question = doc['question']\n",
     "    text = doc['text']\n",
     "    qt = question + ' ' + text\n",
@@ -498,18 +523,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "861a36b02ebe4277a112bf58f24def94",
+       "model_id": "89e189c3669f42038a569a730efa2659",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/948 [00:00<?, ?it/s]"
+       "  0%|          | 0/375 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -517,13 +542,13 @@
     }
    ],
    "source": [
-    "for doc in tqdm(documents):\n",
+    "for doc in tqdm(filtered_documents):\n",
     "    es_client.index(index=index_name, document=doc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -572,10 +597,10 @@
      "output_type": "stream",
      "text": [
       "1: ee58a693: The course has already started. Can I still join it?\n",
-      "2: c02e79ef: Course - When will the course start?\n",
-      "3: a482086d: Course - Can I follow the course after it finishes?\n",
-      "4: be5bfee4: Homework - Are late submissions of homework allowed?\n",
-      "5: 305aead7: Mage AI Files are Gone/disappearing\n"
+      "2: c5cde96c: Running out of storage after building many docker images\n",
+      "3: ed8b300d: How to install Tensorflow in Ubuntu WSL2\n",
+      "4: 8006b496: How to run a script while a web-server is working?\n",
+      "5: 6ba259b1: I filled the form, but haven't received a confirmation email. Is it normal?\n"
      ]
     }
    ],
@@ -610,13 +635,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6881989470194630a32931831dfa66f1",
+       "model_id": "d9ae13ed3e544e859c6ea344bc213c0a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -640,16 +665,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7907103825136612"
+       "0.8169398907103825"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +694,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Answer:* 0.73"
+    "*Answer:* 0.81"
    ]
   }
  ],
