feat: add contents for week4

--- a/004-Monitoring/offline-evaluation/offline-rag-evaluation.ipynb
+++ b/004-Monitoring/offline-evaluation/offline-rag-evaluation.ipynb
@@ -29,7 +29,8 @@
     "import matplotlib.pyplot as plt\n",
     "from groq import Groq\n",
     "import os\n",
-    "from dotenv import load_dotenv"
+    "from dotenv import load_dotenv\n",
+    "from tqdm.auto import tqdm"
    ]
   },
   {
@@ -175,7 +176,7 @@
    "outputs": [],
    "source": [
     "model_name = 'multi-qa-MiniLM-L6-cos-v1'\n",
-    "model = SentenceTransformer(model_name)\n"
+    "model = SentenceTransformer(model_name)"
    ]
   },
   {
@@ -774,7 +775,7 @@
     "    v_llm = model.encode(answer_llm)\n",
     "    v_orig = model.encode(answer_orig)\n",
     "    \n",
-    "    return v_llm.dot(v_orig)\n"
+    "    return v_llm.dot(v_orig)"
    ]
   },
   {
